--- a/wiki_make_static_site/mkdocs.yml
+++ b/wiki_make_static_site/mkdocs.yml
@@ -1,22 +1,14 @@
 site_name: "Liquid Investigations Documentation"
 site_author: "Liquid Investigations"
-site_description: ""
-site_keyword: ""
 
 theme:
-  name: github
-  highlightjs: true
-  hljs_style: github
-
-badge:
- github_repo: docs 
- github_user: liquidinvestigations
+  name: material
 
 markdown_extensions:
     - toc:
-        permalink: "#"
+        permalink: "  #  "
 nav:
-    - 'Home.md'
+    - Home: 'index.md'
     - 'User-Guide.md'
     - 'Technical-Overview.md'
     - 'Installation.md'
@@ -24,8 +16,5 @@ nav:
     - 'Contributing.md'
 plugins:
     - search
-    - ezlinks:
-        warn_ambiguities: true
-        wikilinks: true
-        reference_links: true
-    - no3rdparty
+    - offline
+    - roamlinks
